# stan

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  STAN_MASTER_SPEC.md  install.bat  install_stan.bat  install_stan.ps1  pyproject.toml  start_stan.bat  start_stan_loop.bat  update-stan.bat  update.bat  update_stan.ps1
config/: community.yml  instruments.yml  screencap.yml.example  thresholds.yml
docs/: GOTCHAS_DELIMP.md  HF_SPACE_SETUP.md  HPC_PATHS.md  PEG_EVOSEP_DIAGNOSTIC.md  QUEUE_SWITCHING.md  RELAY_ARCADE_API.md  S10_Instrument_Comparison_Report.md  SESSION_2026-04-23.md  SPEC_multicharge_feature_detector.md  SPEC_pts_per_peak.md  SPEC_tic_overlay_cirt_markers.md  V1_RUNBOOK.md  WIP_stan_sc_module.md  benchmark_report.md  external_tools.md  hf_space_error_endpoint.py  hf_space_tic_patch.md  hpc_guide.md  ips_metric.md  library_versioning.md  setup.md  user_guide.md
stan/: __init__.py  alerts.py  backfill_telemetry.py  baseline.py  cli.py  columns.py  config.py  control.py  db.py  export.py  fleet_setup.py  keep_awake.py  library_builder.py  screencap.py  setup.py  telemetry.py
tests/: conftest.py  test_baseline.py  test_cirt.py  test_class_methods.py  test_column_health.py  test_community.py  test_config.py  test_control.py  test_db.py  test_detector.py  test_drift_cloud_features.py  test_export.py  test_features.py  test_fingerprint.py  test_gating.py  test_irt_deviation.py  test_keep_awake.py  test_metric_completeness.py  test_metrics.py  test_normalize_v1.py  test_peg.py  test_pipeline.py  test_pts_peak.py  test_qc_filter.py  (+6 more)
(+60 files in other folders)
